--- a/CSS/css-de-controle.css
+++ b/CSS/css-de-controle.css
@@ -1,6 +1,51 @@
 body {
-    margin: 0;
-    padding: 0;
-    background: rgb(233,240,121);
-    background: linear-gradient(0deg, rgba(233,240,121,1) 36%, rgba(119,253,45,1) 95%)repeat-y ;
+  margin: 0;
+  padding: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgb(233, 240, 121);
+  background: linear-gradient(
+      0deg,
+      rgba(233, 240, 121, 1) 36%,
+      rgba(119, 253, 45, 1) 95%
+    )
+    no-repeat;
+}
+.box-jogos {
+  margin: 0 auto;
+  margin-top: 20px;
+  box-shadow: black;
+  max-width: 650px;
+  min-width: 110px;
+  border-radius: 5px;
+  background: linear-gradient(223deg, #303fea 0%, #fff 100%);
+}
+.box-jogos-titulo {
+    color:blue;
+  margin: 0 auto;
+  margin-top: 20px;
+  box-shadow: black;
+  max-width: 550px;
+  min-width: 100px;
+  border-radius: 5px;
+  background: linear-gradient(223deg, #303fea 0%, #fff 100%);
+  text-align: center;
+}
+.bandeira {
+  margin-top: 5px;
+  max-width: 80px;
+  min-width: 40px;
+}
+.bandeira-especial {
+  margin-top: 15px;
+  margin-bottom: 14px;
+  max-width: 80px;
+  min-width: 40px;
+  border-radius: 6px;
+}
+.resultado {
+    text-align: center;
+    margin-top: 50px;
+    size: 200px;
+    color: black;
 }
