--- a/CSS/css-de-controle.css
+++ b/CSS/css-de-controle.css
@@ -4,13 +4,11 @@ body {
   width: 100vw;
   height: 100vh;
   background: rgb(233, 240, 121);
-  background: linear-gradient(
-      0deg,
+  background: linear-gradient(0deg,
       rgba(233, 240, 121, 1) 36%,
-      rgba(119, 253, 45, 1) 95%
-    )
-    no-repeat;
+      rgba(119, 253, 45, 1) 95%) no-repeat;
 }
+
 .box-jogos {
   margin: 0 auto;
   margin-top: 20px;
@@ -20,8 +18,9 @@ body {
   border-radius: 5px;
   background: linear-gradientrgba(119, 253, 45, 1) 95%;
 }
+
 .box-jogos-titulo {
-    color:blue;
+  color: blue;
   margin: 0 auto;
   margin-top: 20px;
   box-shadow: black;
@@ -31,21 +30,23 @@ body {
   background: linear-gradientrgba(119, 253, 45, 1) 95%;
   text-align: center;
 }
+
 .box-jogos-menu {
-    margin: 0 auto;
-    margin-top: 20px;
-    box-shadow: black;
-    max-width: 550px;
-    min-width: 100px;
-    border-radius: 5px;
-    background: linear-gradientrgba(119, 253, 45, 1) 95%;
-  }
+  margin: 0 auto;
+  margin-top: 20px;
+  box-shadow: black;
+  max-width: 550px;
+  min-width: 100px;
+  border-radius: 5px;
+  background: linear-gradientrgba(119, 253, 45, 1) 95%;
+}
 
 .bandeira {
   margin-top: 5px;
   max-width: 80px;
   min-width: 40px;
 }
+
 .bandeira-especial {
   margin-top: 15px;
   margin-bottom: 14px;
@@ -53,27 +54,30 @@ body {
   min-width: 40px;
   border-radius: 6px;
 }
+
 .resultado {
-    text-align: center;
-    margin-top: 50px;
-    size: 200px;
-    color: black;
+  text-align: center;
+  margin-top: 50px;
+  size: 200px;
+  color: black;
 }
+
 .icones {
-    text-decoration: none;
-    width: 25px;
-    margin: 3px;
-    align-items: center;
-    margin: 0 auto;
+  text-decoration: none;
+  width: 25px;
+  margin: 3px;
+  align-items: center;
+  margin: 0 auto;
 }
+
 footer {
-    background-color: rgb(174, 211, 118);
-    color: black;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    padding: 20px;
-    margin: 0 auto;
-    margin-top: 40px;
-    text-align: center;
-    justify-content: center;
-    margin-bottom: 0px;
+  background-color: rgb(174, 211, 118);
+  color: black;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  padding: 20px;
+  margin: 0 auto;
+  margin-top: 40px;
+  text-align: center;
+  justify-content: center;
+  margin-bottom: 0px;
 }
