--- a/CSS/css-de-controle.css
+++ b/CSS/css-de-controle.css
@@ -79,5 +79,5 @@ footer {
   margin-top: 40px;
   text-align: center;
   justify-content: center;
-  margin-bottom: 0px;
+  margin-bottom: 0 auto;
 }
